--- a/project.json
+++ b/project.json
@@ -2,7 +2,7 @@
   "name": "CMS",
   "projectId": "176990ca-2a28-4978-b07c-a6ca146a079e",
   "description": "Blank Process",
-  "main": "Main.xaml",
+  "main": "Main_Test.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[25.4.4]"
   },
@@ -45,8 +45,8 @@
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
-      "filePath": "Main.xaml",
-      "uniqueId": "499f8217-41c9-46e2-b9db-5ac046747e18",
+      "filePath": "Main_Test.xaml",
+      "uniqueId": "7e814b99-84c7-4357-b688-44249f1927cb",
       "input": [],
       "output": []
     }
